--- a/css/index.css
+++ b/css/index.css
@@ -51,7 +51,7 @@ html, body {
 
 .info-reservas {
 	width: 100%;
-	height: 300px;
+	height: 250px;
 	position: relative;
 }
 
@@ -64,12 +64,49 @@ html, body {
 	margin-left: 4%;
 }
 
-.below-navbar {
+.footer {
 	width: 100%;
-	height: 100%;
-	margin-top: 64px;
+	height: 13%;
+	background-color: #dddddc;
+	border-top: groove;
 }
 
-.inserted-content {
-	padding: 0%;
+.footer #patrocinadors {
+	width: 20%;
+	height: 2%;
+	z-index: 10;
+	margin-top: 1%;
+	margin-left: 20%;
+}
+
+.footer #img-ajunt {
+	width: 14.8%;
+	height: 0%;
+	z-index: 100;
+	background-image: url('../img/patrocina_espai.jpg');
+	background-size: 100%;
+	background-repeat: no-repeat;
+	position: absolute;
+	margin-left: 60%;
+}
+
+.below-navbar {
+	width: 75%;
+	height: 75%;
+	margin-top: 64px;
+	position: relative;
+	z-index: 10;
+}
+
+#myModalBox {
+	background-color: white;
+	opacity: 0.9;
+	padding-top: 3%;
+	padding-bottom: 3%;
+	padding-left: 5%;
+	padding-right: 5%;
+	margin-top: 7%;
+	margin-bottom: 7%;
+	margin-left: 25%;
+	margin-right: 25%;
 }
