--- a/css/main.css
+++ b/css/main.css
@@ -1,40 +1,56 @@
-html, body {
-	width: 100%;
+.areaBox {
+	width: 80%;
+	height: 100%;
+	position: relative;
+	margin: 0 auto;
+	margin-top: 3%;
+	margin-bottom: 3%;
+	background-color: #EEE;
+	padding-top: 2%;
+	padding-right: 3%;
+	padding-left: 3%;
+	padding-bottom: 2%;
+}
+
+.rowTable {
+	border-color: #EEE;
+	border-width: 0px;
+	border-style: solid; 
+	padding: 1%;
+}
+
+.rowTable#top {
+	border-bottom-width: 1px;
+	background-color: #A7E2D6;
+}
+
+.rowTable#bottom {
+	margin-bottom: 1%;
+	background-color: #B3E6DA;
+}
+
+.side-bar#side-div {
 	height: 100%;
 }
 
-.navbar {
-	padding: 0.5%;
-}
-
-.navbar-brand {
-	font-size: 1.4em;
-}
-
-.navbar-right {
-	margin-top: 0.5%;
-	margin-right: 2%;
-}
-
-.side-bar {
+.side-bar .navbar-stacked {
 	width: 15%;
 	height: 100%;
-	float: left;
-	position: relative;
 	font-size: 1.2em;
-	border-right-width: 2px;
-	border-right-style: groove;
+	position: absolute;
+	border-right-width: 1px;
+	border-right-color: #CCC;
+	border-right-style: solid;
 	background-color: #FFF;
 }
 
 .center-area {
-	width: 100%;
+	width: 84%;
 	height: 100%;
-	margin-top: 5%;
-	margin-left: 16%;
+	margin-top: 64px;
+	margin-left: 15%;
 	padding: 1%;
 	float: center;
-	position: relative;
 }
 
 .inserted-content {
