--- a/css/main.css
+++ b/css/main.css
@@ -1,58 +1,122 @@
-.areaBox {
-	width: 80%;
-	height: 100%;
-	position: relative;
-	margin: 0 auto;
-	margin-top: 3%;
-	margin-bottom: 3%;
-	background-color: #EEE;
-	padding-top: 2%;
-	padding-right: 3%;
-	padding-left: 3%;
-	padding-bottom: 2%;
-}
-
-.rowTable {
-	border-color: #EEE;
-	border-width: 0px;
-	border-style: solid; 
-	padding: 1%;
-}
-
-.rowTable#top {
-	border-bottom-width: 1px;
-	background-color: #A7E2D6;
-}
-
-.rowTable#bottom {
-	margin-bottom: 1%;
-	background-color: #B3E6DA;
-}
-
 .side-bar#side-div {
 	height: 100%;
+
 }
 
 .side-bar .navbar-stacked {
 	width: 15%;
 	height: 100%;
 	font-size: 1.2em;
-	position: absolute;
+	position: fixed;
 	border-right-width: 1px;
 	border-right-color: #CCC;
 	border-right-style: solid;
 	background-color: #FFF;
-}
 
-.center-area {
-	width: 84%;
-	height: 100%;
-	margin-top: 64px;
-	margin-left: 15%;
-	padding: 1%;
-	float: center;
 }
 
 .inserted-content {
 	padding: 0%;
+	margin-top: 64px;
+	height: 100%;
+}
+
+.center-area {
+	width: 80%;
+	height: 100%;
+	margin-top: 64px;
+	margin-left: 15%;
+
+	/*position:fixed;*/
+
+}
+
+.inserted-content-main {
+	height: 100%;
+	padding: 1%;
+
+	/*overflow-y: scroll !important;*/
+}
+
+.btn-calendari {
+	margin-top:-25px;
+}
+
+.select-reserva {
+	width:  200px;
+}
+
+.etiqueta-reserva {
+	width: 200px;
+}
+
+/**
+	CSS de las etiquetas de la reserva
+*/
+.etiqueta-mi-reserva {
+	width: 300px;
+	position:relative;
+
+	float:left;
+
+	margin: 25px;
+
+
+}
+
+.espai-reserva {
+	float:left;
+	width: 130px;
+	padding: 10px;
+	padding-top: 30px;
+	position:relative;
+
+}
+
+.data-reserva {
+	float:left;
+
+	width: 125px;
+	padding: 10px;
+
+	text-align: center;
+	vertical-align: middle;
+}
+
+.hora-reserva {
+
+}
+
+.elimina-reserva {
+	float:left;
+	width: 15px;
+	padding: 10px;
+	text-align: center;
+	vertical-align: middle;
+
+	padding-top: 35px;
+
+	cursor: pointer;
+}
+
+.loginModal .modal-body {
+	padding:5%;
+	text-align:center;
+}
+
+.loginModal .modal-body span {
+	margin-top: 20px;
+	display:block;
+}
+
+.loginModal input[type="password"] {
+	margin-top: 5%;
+}
+
+.user-account {
+	margin-top:7px;
+	margin-right: 5px;
+	cursor: pointer;
+
+
 }
